--- a/朵爱五村点位会议记录/朵爱大邹点位会议记录.md
+++ b/朵爱五村点位会议记录/朵爱大邹点位会议记录.md
@@ -29,8 +29,9 @@
 ## 2025年8月20日会议纪要
 
 <audio controls>
-  <source src="https://duoai-source-audio.obs.cn-east-3.myhuaweicloud.com/2025%E5%B9%B48%E6%9C%8820%E6%97%A5%E4%BC%9A%E8%AE%AE%E8%AE%B0%E5%BD%95.mp3" type="audio/mpeg">
+  <source src="https://github.com/1123193271/duoai_record_meeting/raw/refs/heads/main/%E6%9C%B5%E7%88%B1%E4%BA%94%E6%9D%91%E7%82%B9%E4%BD%8D%E4%BC%9A%E8%AE%AE%E8%AE%B0%E5%BD%95/audio_source/2025%E5%B9%B48%E6%9C%8820%E6%97%A5%E4%BC%9A%E8%AE%AE%E8%AE%B0%E5%BD%95.mp3" type="audio/mpeg">
 </audio>
+
 
 
 - 时间：18:28-18:53
