--- a/朵爱五村点位会议记录/朵爱大邹点位会议记录.md
+++ b/朵爱五村点位会议记录/朵爱大邹点位会议记录.md
@@ -1,4 +1,4 @@
-## 2025年8月18日会议记录
+## 2025年8月18日会议纪要
 
 - 时间：17:30-17:48
 
@@ -12,7 +12,7 @@
   > 4. 兴盐点位负责人：张灿
   > 5. 芦家坝点位负责人：吕宝林
 
-## 2025年8月19日会议记录
+## 2025年8月19日会议纪要
 
 - 时间：17:49-18:08
 
@@ -29,9 +29,8 @@
 ## 2025年8月20日会议纪要
 
 <audio controls>
-  <source src="https://github.com/1123193271/duoai_record_meeting/raw/refs/heads/main/%E6%9C%B5%E7%88%B1%E4%BA%94%E6%9D%91%E7%82%B9%E4%BD%8D%E4%BC%9A%E8%AE%AE%E8%AE%B0%E5%BD%95/audio_source/2025%E5%B9%B48%E6%9C%8820%E6%97%A5%E4%BC%9A%E8%AE%AE%E8%AE%B0%E5%BD%95.mp3" type="audio/mpeg">
+  <source src="http://github.com/1123193271/duoai_record_meeting/raw/refs/heads/main/%E6%9C%B5%E7%88%B1%E4%BA%94%E6%9D%91%E7%82%B9%E4%BD%8D%E4%BC%9A%E8%AE%AE%E8%AE%B0%E5%BD%95/audio_source/2025%E5%B9%B48%E6%9C%8820%E6%97%A5.mp3" type="audio/mpeg">
 </audio>
-
 
 
 - 时间：18:28-18:53
@@ -58,3 +57,39 @@
   >    - 考虑让做工熟练、时间稳定、质量可靠且能按时交货的人员，通过租赁机器的方式在家做工。但是朵爱方面考虑其企业文化和价值观建设，希望以大邹为锚点，进行全镇乃至全市推广，并不鼓励这种做工方式。
   >    - 此为流动性工作，保险缴纳不现实。
 
+## 2025年8月21日会议纪要
+
+<audio controls>
+  <source src="https://github.com/1123193271/duoai_record_meeting/raw/refs/heads/main/%E6%9C%B5%E7%88%B1%E4%BA%94%E6%9D%91%E7%82%B9%E4%BD%8D%E4%BC%9A%E8%AE%AE%E8%AE%B0%E5%BD%95/audio_source/2025%E5%B9%B48%E6%9C%8821%E6%97%A5.mp3" type="audio/mpeg">
+</audio>
+
+- 时间：17:54-18:10
+
+- 参会人员：颜良秀、刘辉、李新宇、郝勇、万加伟、王小青、范兆杰、王志健
+
+- 会议主持：颜良秀
+
+- 会议记录：李新宇
+
+- 会议类容
+
+  > 1. 各点进展情况
+  >
+  >    - 芦家坝村点位今日电工施工，明日铺线整备，最迟再过三日，机器可进场；
+  >    - 吉耿村今日新增三人学习，学习效果良好，做工质量优秀；
+  >    - 兴盐村电工作业即将完工，今日暂无人学习；
+  >    - 双溪村今日五人学习，有三人感冒，上批返工即将结束，目前最高产量为850双/人；
+  >    - 沈五村最高产量900双/人，今日七人学习。
+  >
+  > 2. 各方反映问题和需要协调解决的事项
+  >
+  >    - 培训可能要延迟到下周，目前还在打磨培训方案，原定培训方案长达五天，需要缩短
+  >    - 沈五反映做工人员产量差异的原因可能部分来源于机器的差异；
+  >    - 沈五反映可能还需要招募打包人员，目前打包工人与缝纫工人比例为1:2较为合适；
+  >    - 沈五点位的排布方案已出待检。
+  >
+  > 3. 有关建议和其他事项
+  >
+  >    - 沈五建议周六日培训，拉长培训时间线，集中式学习可能效果一般。
+  >
+  >      
